# iroh-doctor

./: Cargo.toml  README.md
src/: doctor.rs  nat_classifier.rs
src/commands/: accept.rs  connect.rs
src/swarm/: execution.rs  net_report_ext.rs  transfer_utils.rs
src/swarm/tests/: throughput.rs
