[package]
name = "iroh-doctor"
version = "0.99.1"
edition = "2021"
readme = "README.md"
description = "Diagnose and test iroh in your network configuration"
license = "MIT OR Apache-2.0"
authors = ["dignifiedquire <me@dignifiedquire.com>", "n0 team"]
repository = "https://github.com/n0-computer/iroh-doctor"
keywords = ["networking", "p2p", "holepunching", "diagnostics", "iroh"]

[dependencies]
anyhow = "1.0.90"
async-channel = "2.3.1"
bytes = "1.8.0"
clap = { version = "4.5.20", features = ["derive"] }
console = "0.16"
derive_more = { version = "2.0", features = ["display", "from_str"] }
dirs-next = "2.0.0"
n0-future = "0.3.2"
hex = "0.4.3"
indicatif = { version = "0.18", features = ["tokio"] }
iroh = { version = "=1.0.0-rc.0", features = ["metrics"] }
iroh-base = "=1.0.0-rc.0"
iroh-metrics = { version = "=1.0.0-rc.0", features = ["service", "static_core"] }
iroh-services = "=1.0.0-rc.0"
iroh-relay = "=1.0.0-rc.0"
netwatch = "0.17"
n0-watcher = "=1.0.0-rc.0"
portable-atomic = "1.9.0"
postcard = "1.0.10"
portmapper = "0.17"
prometheus-client = "0.24"
noq = "=1.0.0-rc.0"
rand = "0.10"
rustls = { version = "0.23", default-features = false, features = ["ring"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_with = "3.11.0"
ssh-key = { version = "0.7.0-rc.10", features = ["ed25519", "std", "rand_core"] }
tokio = { version = "1.40.0", features = ["signal"] }
tokio-util = "0.7.12"
toml = { version = "1.1", features = ["preserve_order"] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
webpki-roots = "1.0"
ed25519-dalek = "=3.0.0-pre.7"
irpc = { version = "0.15", features = ["derive", "default"] }
irpc-iroh = "0.15"
rcan = "0.3"
uuid = { version = "1.10", features = ["v4", "serde"] }
url = "2.5.2"

[dev-dependencies]
url = "2.5.2"

[lints.rust]
elided_lifetimes_in_paths = "warn"
unnameable_types = "warn"
unreachable_pub = "warn"

[lints.clippy]
or_fun_call = "warn"
use_self = "warn"
